--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,8 @@
     <h1>Google Sign In</h1>
     <hr>
 
-    <div id="g_id_onload" 
-        data-client_id="28933440555-glj8nb131b1a2m8f8s7i69ec9cg35ruk.apps.googleusercontent.com"
-        data-auto_prompt="false" 
-        data-callback="handleCredentialResponse">
+    <div id="g_id_onload" data-client_id="28933440555-glj8nb131b1a2m8f8s7i69ec9cg35ruk.apps.googleusercontent.com"
+        data-auto_prompt="false" data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
         data-shape="rectangular" data-logo_alignment="left">
@@ -55,8 +53,18 @@
             fetch(rutaUsar, options)
                 .then(res => res.json())
                 .then(data => {
-                    localStorage.setItem('correo', data.usuario.correo); //se guarda el correo en localStorage
-                    location.reload(); // se recarga la página una vez que se creó el inicio de sesión
+
+                    switch (data.estatus) {
+                        case 'success':
+                            localStorage.setItem('correo', data.data.usuario[0].correo); //se guarda el correo en localStorage
+                            location.reload(); // se recarga la página una vez que se creó el inicio de sesión
+                            break;
+                        default:
+                            alert(data.msg);
+                            console.log(data);
+                            break;
+                    }
+
                 })
                 .catch(err => console.log(err));
         }
